<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/item1"
        android:orderInCategory="1"
        android:showAsAction="ifRoom|withText"
        android:title="@string/save"/>
    <item
        android:id="@+id/item2"
        android:orderInCategory="2"
        android:showAsAction="ifRoom|withText"
        android:title="@string/edit"/>
    <item
        android:id="@+id/item3"
        android:orderInCategory="3"
        android:showAsAction="ifRoom|withText"
        android:title="@string/about"/>
    <item
        android:id="@+id/item4"
        android:orderInCategory="4"
        android:showAsAction="ifRoom|withText"
        android:title="@string/help"/>
    <item
        android:id="@+id/item5"
        android:orderInCategory="5"
        android:showAsAction="ifRoom|withText"
        android:title="@string/file"/>
    <item
        android:id="@+id/item6"
        android:orderInCategory="6"
        android:showAsAction="ifRoom|withText"
        android:title="@string/run"/>
    <item
        android:id="@+id/item7"
        android:orderInCategory="7"
        android:showAsAction="ifRoom|withText"
        android:title="@string/source"/>
    <item
        android:id="@+id/item8"
        android:orderInCategory="8"
        android:showAsAction="ifRoom|withText"
        android:title="@string/navigate"/>
    <item
        android:id="@+id/item9"
        android:showAsAction="ifRoom"
        android:actionViewClass="android.widget.SearchView" 
        android:title="@string/search"/>
    <item
        android:id="@+id/item10"
        android:orderInCategory="10"
        android:showAsAction="ifRoom|withText"
        android:title="@string/project"/>

</menu>