<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/nodelist"
        android:orderInCategory="1"
        android:showAsAction="ifRoom|withText"
        android:title="@string/nlist"/>
    <item
        android:id="@+id/config"
        android:orderInCategory="2"
        android:showAsAction="ifRoom|withText"
        android:title="@string/config"/>
    <item
        android:id="@+id/alarm"
        android:orderInCategory="3"
        android:showAsAction="ifRoom|withText"
        android:title="@string/alarm"/>
    <item
        android:id="@+id/setting"
        android:orderInCategory="3"
        android:showAsAction="ifRoom|withText"
        android:title="@string/setting"/>
    

</menu>